@@ -1,6 +1,6 @@
-DIST fotoxx-5.10.5.tar.gz 947536 RMD160 a7c89d8516a42c2db3dd9768b66ba5dcc0e38d30 SHA1 b59e19a6fa82b7b8913baa2d8b84018ed3e7cda4 SHA256 52c83416bd76f533ec5a2f4bc55446cf7767e3cb0c068ef70293093284f3ee7b
-DIST fotoxx-6.1.tar.gz 2068809 RMD160 5ff18d352845ec8e4a7bc92f0cd71c1a7e68a5ef SHA1 fe8397fb7f6a6cceb22be7a6775fe7a6f0ee0ba1 SHA256 ab8c3048367890b8a4de6557c7bbf68fbc20a83447b01939d77f112589bedde5
+DIST fotoxx-5.10.5.tar.gz 947807 RMD160 447f2837d4cd7ba10d5676f317fda38513134935 SHA1 d8699081f6f179404fc1eab2789d3c1142ce7bf1 SHA256 2f57af622c7a1d4545e0de447228164b7a2612263db22d250b0b12fb1d9a08c5
+DIST fotoxx-6.1.tar.gz 356848 RMD160 7919e7cec64332b71c16b111dc92b2f1bbebe20d SHA1 74e7cfce87f6d8ce2ededfd986f3e6e4f17992ac SHA256 558ccfc4c087e2429e2d1881c04f534b332fd61bbe1e31df0ea2075cb4b346e8
 EBUILD fotoxx-5.10.5.ebuild 759 RMD160 0ba9102a51833042031cb0bca5be9284189438a9 SHA1 d95d85c9e4deb07234a765ea9e49154dd0c9cf8e SHA256 0324e39e9f95a86bcd96842a4d94c778085b88d686a08b9058481c83be88c0b5
-EBUILD fotoxx-6.1.ebuild 1026 RMD160 52aa18e07678fff6abd8ba62acdb05ab43c893e1 SHA1 573139e1b22e95c2164e4370aa9b1653ed0b168f SHA256 2e4ffe18c0bd183b98d72d046c1ee8ac431eca31ebb8e29fa127aee86f82758c
-MISC ChangeLog 2860 RMD160 e46bd9fb6a368fb98327a7493f9898afae4f3e9b SHA1 fd1306d27e742f467438254b36ab3d1badbfa27c SHA256 172b0085764fc47e894c9b5e401633bcb4a5ac3d08b7e5fb8b4e42f6639a96fd
+EBUILD fotoxx-6.1.ebuild 1024 RMD160 bde19b1cdb5b04e3f43a9cf0959aae7d3f42710a SHA1 ff5c420abf122bc62622d1bee506298f81386560 SHA256 92986c952bec4756c2ce77b4fe860fb76e962060e24f9ac8e03040736be5800a
+MISC ChangeLog 3003 RMD160 00920780bd82b0b50f182ef2b91926e385aba538 SHA1 c6aba9642c1b6fce5f059f9a2c4e4a5ec159df52 SHA256 3133cd13533f80632ef7db559c1ddc2df7a899d7aec629442bd277865857f72b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
