@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Mar 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
+  fotoxx-6.1.ebuild:
+  moved S definition above src_unpack and use it there too
+
   26 Feb 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-6.1.ebuild:
   Version bumb for Fotoxx. Keeping previous version as this is beta.
 
